--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
     <div class="col-xs-12">
       <h3>I'm in the AppComponent</h3>
       <hr>
-      <app-server></app-server>
       <app-servers></app-servers>
-      <!-- <div app-servers></div>
-      <div class="app-servers"></div>-->
+<!--      <div app-servers></div>-->
+<!--      <div class="app-servers"></div>-->
     </div>
   </div>
 </div>
