--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,7 +1,10 @@
 <label>Server Name</label>
-<input type="text"
-       class="form-control"
-  (input)="onUpdateServername($event)">
+<!--<input type="text"-->
+<!--       class="form-control"-->
+<!--  (input)="onUpdateServername($event)">-->
+<br>
+<input type="text" class="form-control" [(ngModel)]="serverName">
+
 <p>{{serverName}}</p>
 <button class="btn btn-primary"
         [disabled]="!allowNewServer"
