--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -5,10 +5,31 @@
 <br>
 <input type="text" class="form-control" [(ngModel)]="serverName">
 
-<p>{{serverName}}</p>
+<!--<p>{{serverName}}</p>-->
 <button class="btn btn-primary"
         [disabled]="!allowNewServer"
-        (click)="onCreateServer()">Add server</button>
+        (click)="onCreateServer()"
+ >Add server</button>
+<div class="container">
+  <div class="row">
+    <div class="col-xl-12">
+      <label>Username</label>
+      <input type="text" class="form-control" [(ngModel)]="username">
+      <p>{{username}}</p>
+      <button
+        class="btn btn-primary"
+        [disabled]="username===''"
+        (click)="username= ''">Reset User</button>
+    </div>
+  </div>
+</div>
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{serverCreationStatus}}</p>
+<!--<p *ngIf="serverCreated; else noServer">Server was created, server name is {{serverName}}</p>-->
+<!--<ng-template #noServer><p>No Server was created! </p></ng-template>-->
+<!--<p>{{serverCreationStatus}}</p>-->
+
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
+<app-server *ngFor="let Server of servers"></app-server>
+
+
 
